# cmake-switch-template

./: CMakeLists.txt
